--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,176 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+html {
+  scroll-behavior: smooth !important;
+}
 
+/* Track */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+  width: 2px !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 224 71.4% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 224 71.4% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 224 71.4% 4.1%;
+    --primary: 220.9 39.3% 11%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 220 14.3% 95.9%;
+    --secondary-foreground: 220.9 39.3% 11%;
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 220 8.9% 46.1%;
+    --accent: 220 14.3% 95.9%;
+    --accent-foreground: 220.9 39.3% 11%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+    --ring: 224 71.4% 4.1%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+
+    --header-bg: #212121;
+    --body-bg: #181818;
+    --nav-selected: #1f2c3e;
+    --primary-btn: #177ddc;
+    --btn-active: #1f2c3e;
+    --folder-bg: #2a2a2a;
+    --folder-icon-bg: #ff9e60;
+    --icon-bg: #f8a365;
+    --gray: gray;
+    --sidebar-link-color: hsla(0, 0%, 100%, 0.85);
+    --sidebar-link-active-bg: rgba(58, 125, 213, 0.2);
+    --sidebar-link-active-text: #177ddc;
+    --folder-bg: hsla(0, 0%, 100%, 0.08);
+    --folder-border-color: #434343;
+    --divider-border-color: hsla(0, 0%, 100%, 0.19);
+    --dialog-bg: #1f1f1f;
+  }
+  .sidebar-divider {
+    background-color: var(--divider-border-color);
+    height: 1px;
+    margin: 5px 0 10px 7px;
+  }
+  .dark {
+    --background: 224 71.4% 4.1%;
+    --foreground: 210 20% 98%;
+    --card: 224 71.4% 4.1%;
+    --card-foreground: 210 20% 98%;
+    --popover: 224 71.4% 4.1%;
+    --popover-foreground: 210 20% 98%;
+    --primary: 210 20% 98%;
+    --primary-foreground: 220.9 39.3% 11%;
+    --secondary: 215 27.9% 16.9%;
+    --secondary-foreground: 210 20% 98%;
+    --muted: 215 27.9% 16.9%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+    --accent: 215 27.9% 16.9%;
+    --accent-foreground: 210 20% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 215 27.9% 16.9%;
+    --input: 215 27.9% 16.9%;
+    --ring: 216 12.2% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
+.active {
+  background-color: var(--sidebar-link-active-bg);
+  color: var(--sidebar-link-active-text);
+  font-weight: 500;
+  transition: all 0.3s ease-in-out;
+}
+.active:hover {
+  background-color: var(--btn-active);
+  transition: all 0.3s ease-in-out;
+}
+.link-transition {
+  transition: all 0.3s ease-in-out;
+}
+.folder-item {
+  background-color: var(--folder-bg);
+  border: 1px solid var(--folder-border-color);
+  border-radius: 8px;
+  height: 56px;
+  isolation: isolate;
+  line-height: 56px;
+  max-width: 390px;
+  padding: 0 16px;
+  position: relative;
+  transition-duration: 0.2s;
+  transition-property: transform, background-color;
+  transition-timing-function: ease;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+.shared-folder-edit {
+  display: none;
+}
+.shared-folder:hover .shared-folder-edit {
+  display: block;
+}
+.boxShadow {
+  box-shadow: 0 12px 40px rgba(0, 0, 0, 0.12);
+}
+.item {
+  border-radius: 8px;
+}
+.folderBtn {
+  opacity: 0;
+}
+.folder:hover .folderBtn {
+  opacity: 1;
+}
+.imgThubnail:hover .bg-overlay {
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+}
+.imgThubnail:hover .horizontalIcon {
+  opacity: 1;
+}
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
