--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,8 @@ html {
     --folder-border-color: #434343;
     --divider-border-color: hsla(0, 0%, 100%, 0.19);
     --dialog-bg: #1f1f1f;
+    --bg-red: #a61d24;
+    --popover-text-color: hsla(0, 0%, 100%, 0.65);
   }
   .sidebar-divider {
     background-color: var(--divider-border-color);
