--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,7 @@ html {
     --dialog-bg: #1f1f1f;
     --bg-red: #a61d24;
     --popover-text-color: hsla(0, 0%, 100%, 0.65);
+    --switch-bg: #313131;
   }
   .sidebar-divider {
     background-color: var(--divider-border-color);
@@ -173,8 +174,7 @@ html {
 .imgThubnail:hover .horizontalIcon {
   opacity: 1;
 }
-.imageWrapper {
-}
+
 .imageBtn {
   opacity: 0;
 }
