--- a/app/_components/folder/style.css
+++ b/app/_components/folder/style.css
@@ -3,7 +3,8 @@
   overflow: hidden;
 }
 
-.trashFolderWithControls {
+.trashFolderWithControls,
+.imageVideoControls {
   display: none;
   opacity: 0;
   position: absolute;
@@ -12,13 +13,13 @@
   height: 100%;
   width: 100%;
 }
-
 .trash-folder:hover .mainTrashFolder {
   opacity: 0;
   visibility: hidden;
 }
 
-.trash-folder:hover .trashFolderWithControls {
+.trash-folder:hover .trashFolderWithControls,
+.trash-folder:hover .imageVideoControls {
   display: flex;
   opacity: 1;
   visibility: visible;
