--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,7 @@ html {
     --divider-border-color: hsla(0, 0%, 100%, 0.19);
     --dialog-bg: #1f1f1f;
     --bg-red: #a61d24;
+    --bg-red-hover: #800f19;
     --popover-text-color: hsla(0, 0%, 100%, 0.65);
     --switch-bg: #313131;
     --divider-color: #303030;
