--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,7 @@ html {
     --popover-text-color: hsla(0, 0%, 100%, 0.65);
     --switch-bg: #313131;
     --divider-color: #303030;
+    --selected-document-bg: #141414;
   }
   .sidebar-divider {
     background-color: var(--divider-border-color);
